WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66910
Fix pan scrolling on Windows to be clamped
https://bugs.webkit.org/show_bug.cgi?id=66910
Summary
Fix pan scrolling on Windows to be clamped
Scott Byer
Reported
2011-08-24 17:44:11 PDT
Fix pan scrolling on Windows to be clamped
Attachments
Patch
(8.50 KB, patch)
2011-08-24 17:50 PDT
,
Scott Byer
no flags
Details
Formatted Diff
Diff
Patch
(9.33 KB, patch)
2011-08-25 15:32 PDT
,
Scott Byer
no flags
Details
Formatted Diff
Diff
change border to black
(9.31 KB, patch)
2011-08-30 12:22 PDT
,
Scott Byer
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Scott Byer
Comment 1
2011-08-24 17:50:01 PDT
Created
attachment 105106
[details]
Patch
Scott Byer
Comment 2
2011-08-24 17:52:51 PDT
Bug originally reported as
http://code.google.com/p/chromium/issues/detail?id=89366
WebKit Review Bot
Comment 3
2011-08-24 18:36:55 PDT
Comment on
attachment 105106
[details]
Patch
Attachment 105106
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9507108
New failing tests: fast/events/panScroll-click-hyperlink.html
Scott Byer
Comment 4
2011-08-25 15:32:39 PDT
Created
attachment 105262
[details]
Patch Add in expected result for chromium-linux
Scott Byer
Comment 5
2011-08-26 09:30:56 PDT
Comment on
attachment 105262
[details]
Patch Okay, I've got the test expectations fixed up.
Simon Fraser (smfr)
Comment 6
2011-08-30 12:07:31 PDT
Comment on
attachment 105262
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=105262&action=review
> LayoutTests/platform/win/fast/events/panScroll-correct-direction.html:18 > + <div id="overflow" style="width:500px; height:150px; overflow:auto; border:2px solid red; padding:10px">
Please don't use red in cases where it's not indicating failure.
Scott Byer
Comment 7
2011-08-30 12:22:45 PDT
Created
attachment 105667
[details]
change border to black
Scott Byer
Comment 8
2011-08-30 12:24:53 PDT
Ok, changed border to black (sorry, had copied/modified another test). Can I get a c+?
WebKit Review Bot
Comment 9
2011-08-30 14:24:23 PDT
Comment on
attachment 105667
[details]
change border to black Rejecting
attachment 105667
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: 58afcb04c6b843ddba822ebdc84ed157bdae4f81
r94109
= 5cc5f9c7136bbe440c5d43a28d43d84438b686e5 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/9570400
Adam Barth
Comment 10
2011-08-30 14:42:23 PDT
Merge conflict during commit: Conflict at '/trunk/Source/WebCore/ChangeLog' at /usr/lib/git-core/git-svn line 572 Failed to run "[u'git', u'svn', u'dcommit']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/
Adam Barth
Comment 11
2011-08-30 14:42:41 PDT
Comment on
attachment 105667
[details]
change border to black Looks like there was a commit storm. Lets try again.
WebKit Review Bot
Comment 12
2011-08-30 17:02:45 PDT
Comment on
attachment 105667
[details]
change border to black Clearing flags on attachment: 105667 Committed
r94130
: <
http://trac.webkit.org/changeset/94130
>
WebKit Review Bot
Comment 13
2011-08-30 17:02:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 14
2011-08-31 05:51:09 PDT
<
rdar://problem/10052406
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug