Fix pan scrolling on Windows to be clamped https://bugs.webkit.org/show_bug.cgi?id=66910

Source/WebCore:

With the recent change to support rubberband scrolling on the Mac, pan
scrolling of overflow divs became unclamped and would scroll infinitely
and along an axis without a scrollbar.

Patch by Scott Byer <scottbyer@chromium.org> on 2011-08-30
Reviewed by Simon Fraser

Test: platform/win/fast/events/panScroll-correct-direction.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::panScrollFromPoint):
(WebCore::RenderLayer::scrollByRecursively):
* rendering/RenderLayer.h:

LayoutTests:

With the recent change to support rubberband scrolling on the Mac, pan
scrolling of overflow divs became unclamped and would scroll infinitely
and along an axis without a scrollbar.

Patch by Scott Byer <scottbyer@chromium.org> on 2011-08-30
Reviewed by Simon Fraser

* platform/mac/fast/frames/iframe-scaling-with-scroll-expected.png:
* platform/win/fast/events/panScroll-click-hyperlink-expected.txt: Added.
* platform/win/fast/events/panScroll-correct-direction-expected.txt: Added.
* platform/win/fast/events/panScroll-correct-direction.html: Added.

Canonical link: https://commits.webkit.org/83056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94130 268f45cc-cd09-0410-ab3c-d52691b4dbfc